# trinity

./: .gitignore  .scalafmt.conf  LICENSE  README.md  build.sbt
.github/workflows/: test.yml
riscv-tests/: Makefile  README.md  main.S
riscv-tests/include/: riscv_test.h  test_macros.h
riscv-tests/isa/: 0_simple.S  10_slli.S  11_sllw.S  12_slliw.S  13_slt.S  14_slti.S  15_sltiu.S  16_sltu.S  17_sra.S  18_srai.S  19_sraiw.S  20_sraw.S  21_srl.S  22_srli.S  23_srliw.S  24_srlw.S  25_sub.S  26_subw.S  27_xor.S  28_xori.S  29_lui.S  2_addi.S  30_beq.S  31_bge.S  32_bgeu.S  33_blt.S  34_bltu.S  35_bne.S  36_jal.S  37_jalr.S  38_lb.S  39_lbu.S  3_addiw.S  40_lh.S  41_lhu.S  42_lw.S  43_lwu.S  44_ld.S  45_sb.S  46_sh.S  (+10 more)
run_on_verilator/: CMakeLists.txt  defer.h  elf64.h  loadelf.cpp  loadelf.h  main.cpp  sim_memory.cpp  sim_memory.h  simulator.cpp  simulator.h
src/main/scala/systolic/: Converter.scala  Expr.scala  README.md  Systolic.scala  Util.scala
src/main/scala/systolic/core/: ProcessingElement.scala  SystolicArray.scala  package.scala
src/main/scala/trinity/: Config.scala
src/main/scala/trinity/core/: CacheBus.scala  CommonBundles.scala  Config.scala  Core.scala  RegisterFile.scala
src/main/scala/trinity/core/decode/: Decoder.scala
src/main/scala/trinity/sim/: SimCore.scala  SimRam.scala
src/main/scala/trinity/util/: DecodeLogic.scala  PipelineStage.scala  TrinityModule.scala  Utils.scala
src/test/scala/systolic/: SystolicMain.scala
src/test/scala/systolic/core/: SystolicArrayTest.scala
src/test/scala/trinity/: DecoderTest.scala  ExampleTest.scala
(+21 files in other folders)
